--- a/05-SmartSpace-sass/css/style.css
+++ b/05-SmartSpace-sass/css/style.css
@@ -14,6 +14,16 @@ img {
 
 /* common-------*/
 /*index/html*/
+.header__inner {
+  max-width: 1000px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  padding: 50px 0 80px;
+}
 .header__logo {
   font-size: 24px;
   font-weight: bold;
@@ -22,30 +32,100 @@ img {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/*spacess */
-.spacess {
-  padding-bottom: 120px;
+.nav__list {
+  display: grid;
+  grid-auto-flow: column;
 }
-.spacess__inner {
+
+.nav__active {
+  color: #FF9900;
+}
+
+/*main--------*/
+.spaces__inner {
   max-width: 1000px;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  display: grid;
-  grid-auto-flow: column;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.spacess__logo {
-  font-size: 24px;
+.spaces__info {
+  width: 44%;
+}
+.spaces__pic {
+  width: 50%;
+}
+
+main .unit__catch {
+  color: #FF9900;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1.66px;
+  text-align: left;
+  margin-bottom: 20px;
+  margin-top: 174px;
+}
+
+main h2 {
+  font-size: 48px;
+  letter-spacing: 0.02px;
+  line-height: 1.2em;
+}
+
+.unit__text p {
+  margin-top: 40px;
+  font-size: 15px;
+  letter-spacing: 0.02px;
+  line-height: 1.7em;
+}
+
+.btn {
+  display: block;
+  width: 200px;
+  margin-top: 60px;
+  padding: 20px;
+  background-color: #F85A47;
+  color: #fff;
   font-weight: bold;
   line-height: 1;
+  text-align: center;
+  border-radius: 20px;
+  margin-bottom: 174px;
 }
-.spacess__logo a {
-  transition: 0.2s;
+
+.reviews__inner {
+  max-width: 1000px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
-.spacess__logo a:hover {
-  color: #FF9900;
+.reviews__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  -moz-column-gap: 6%;
+  column-gap: 6%;
+}
+
+.card {
+  border: 1px solid #A3A3A3;
+  padding: 45px 40px 45px;
+  border-radius: 8%;
+}
+
+.card__text {
+  margin-top: 40px;
+}
+
+.footer {
+  padding: 100px 0;
+  text-align: right;
+  background-color: #DBFFFF;
+}
+
+.footer__inner {
+  margin-top: 120px;
 }
 
 :last-child {
