--- a/05-SmartSpace-sass/sass/style.scss
+++ b/05-SmartSpace-sass/sass/style.scss
@@ -40,43 +40,119 @@ img {
 /* common-------*/
 
 /*index/html*/
-
-.header__logo {
-    font-size: 24px;
-    font-weight: bold;
-    letter-spacing: 0.02em;
-    line-height: 1px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-
-/*spacess */
-.spacess {
-    padding-bottom: 120px;
-
+.header {
     &__inner {
         @include inner();
         display: grid;
         grid-auto-flow: column;
-        justify-content: space-between;
         align-items: center;
+        padding: 50px 0 80px;
     }
 
     &__logo {
         font-size: 24px;
         font-weight: bold;
-        line-height: math.div(24, 24);
-
-        a {
-            transition: .2s;
-
-            &:hover {
-                color: $color-main;
-            }
-
-        }
+        letter-spacing: 0.02em;
+        line-height: 1px;
+        font-family: Arial, Helvetica, sans-serif;
     }
+}
+
+.nav__list {
+    display: grid;
+    grid-auto-flow: column;
+}
+
+.nav__active {
+    color: #FF9900;
+}
+
+/*main--------*/
+.spaces {
+    &__inner {
+        @include inner();
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__info {
+        width: 44%;
+    }
+
+    &__pic {
+        width: 50%;
+    }
+}
+
+main .unit__catch {
+    color: #FF9900;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.66px;
+    text-align: left;
+    margin-bottom: 20px;
+    margin-top: 174px;
+}
+
+main h2 {
+    font-size: 48px;
+    letter-spacing: 0.02px;
+    line-height: 1.2em;
+}
+
+.unit__text p {
+    margin-top: 40px;
+    font-size: 15px;
+    letter-spacing: 0.02px;
+    line-height: 1.7em;
+}
+
+.btn {
+    display: block;
+    width: 200px;
+    margin-top: 60px;
+    padding: 20px;
+    background-color: #F85A47;
+    color: #fff;
+    font-weight: bold;
+    line-height: 1;
+    text-align: center;
+    border-radius: 20px;
+    margin-bottom: 174px;
+}
+
+.reviews {
+    &__inner {
+        @include inner();
+    }
+
+    &__list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        -moz-column-gap: 6%;
+        column-gap: 6%;
+
+    }
+}
+
+.card {
+    border: 1px solid #A3A3A3;
+    padding: 45px 40px 45px;
+    border-radius: 8%;
+}
+
+.card__text {
+    margin-top: 40px;
+
+}
+
+//footer//
+.footer {
+
+    padding: 100px 0;
+    text-align: right;
+    background-color: #DBFFFF;
 }
 
 // 要素の中野一番最後のマージンを０にする
